media/sonarr/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
spec:
  hostnames:
    - sonarr.ant-podz.xyz
  parentRefs:
    - name: traefik-production
      namespace: networking
  rules:
    - matches:
      backendRefs:
        - name: sonarr
          port: 8989
