media/sonarr/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.192.168.86.2.nip.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - kind: Service
          name: sonarr
          port: 8989
